--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ disqus_shortname: "rainyalley"
 
 
 
-url: "http://blog.rainyalley.com"
-imgrepo: "http://blog.rainyalley.com/static/img"
+url: "https://marshalord.github.io/CSC006"
+imgrepo: "https://marshalord.github.io/CSC006/static/img"
 
 
 #url: "http://127.0.0.1:4000"
